fix alignment in messages-form, closes #1803
Closes #1803

Merge request studip/studip!1241

--- a/resources/assets/stylesheets/scss/messages.scss
+++ b/resources/assets/stylesheets/scss/messages.scss
@@ -87,10 +87,21 @@ a.message-tag {
     color: $base-gray;
 }
 
+form.default {
+    .message-user-list {
+        label {
+            margin: 0;
+        }
+
+        margin-bottom: $gap;
+    }
+}
+
 .message-search-wrapper {
     display: flex;
     justify-content: flex-start;
     margin-top: 1ex;
+    margin-bottom: 0.5ex;
 
     > * {
         margin-right: 1em;
